add images and fix styling

--- a/NomNom/src/comparison/table.css
+++ b/NomNom/src/comparison/table.css
@@ -7,7 +7,6 @@
   display: flex;
   justify-content: center;
   margin: 20px;
-  
 }
 
 .table-item {
@@ -15,14 +14,18 @@
   padding: 20px;
 }
 
+.nom-food-header {
+  height: 100px;
+  margin: 20px;
+}
+
 .table-item.dog-food {
   border-right: 1px solid gray;
 }
 
 .table-item-food-image{
-  width: 240px;
   height: 250px;
-  background-color: gray;
+  margin-bottom: 20px;
 }
 
 .table-item-macros {
